<resources>
    <string name="app_name">FirstApp</string>
    <string name="nmedia">Nmedia!</string>
    <string name="description_post_author_avatar" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_like">Likes</string>
    <string name="description_saw">Saw</string>
    <string name="description_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="remove">Remove</string>
    <string name="content">Content</string>
    <string name="content_must_not_be_empty">Content must not be empty</string>
    <string name="edit">Edit</string>
    <string name="editing">Editing</string>
    <string name="chooser_share_post">Share post</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="title_activity_intent_handler" translatable="false">IntentHandlerActivity</string>
    <string name="new_post">new post</string>
    <string name="cancel">Cancel</string>
    <string name="channel_remote_name" >Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\\\'s post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="no_internet">There is no Internet at all</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\n If you create a new post, it will appear here</string>
    <string name="description_load_new_posts" >Load new posts</string>
    <string name="load_new_posts">Loading new posts</string>
    <string name="description_select_photo" >Select photo from gallery</string>
    <string name="description_take_photo">Take photo</string>
    <string name="clear" >Clear preview</string>
    <string name="pick_photo_error">Pick photo error</string>
    <string name="description_full_screen_image" >Full screen</string>
    <string name="save">save</string>
    <string name="image">image</string>
    <string name="sign_up" >Registration</string>
    <string name="sign_out">Logout</string>
    <string name="sign_in">Log in</string>
    <string name="description_preview" >description preview</string>
    <string name="login" >Login</string>
    <string name="password" >Password</string>
    <string name="confirm_password" >Confirm password</string>
    <string name="login_now" >Log in</string>
    <string name="your_password" >Your password</string>
    <string name="name">Name</string>
    <string name="your_login">Your login</string>
    <string name="blankAuth" >Blank authorization</string>
    <string name="invalidAuth">Invalid autrorization</string>
    <string name="signIn" >Sign In</string>
    <string name="description_choose_gallery" >Pick photo</string>
    <string name="description_make_photo" >Make photo</string>
    <string name="register" >Register</string>
    <string name="blankRegister">Blank register</string>
    <string name="match_passwords" >Match passwords</string>
    <string name="confirm_signOut" >Confirm sign out</string>
    <string name="signOut" >Sign out</string>
    <string name="notification_new_post" >New Post</string>
    <string name="notification_default" >Notification</string>
    <string name="ad_description" >Ad description</string><![CDATA[



    />




]]>
</resources>